--- a/simple-web/pom.xml
+++ b/simple-web/pom.xml
@@ -7,13 +7,75 @@
     <groupId>cn.huangkanglin.simple.web.project</groupId>
     <artifactId>simple-web</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
+    <!--配置模块-->
+    <properties>
+        <!--配置工程编码-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <!--依赖模块-->
     <dependencies>
+        <!--自己写的工具类-->
         <dependency>
             <groupId>cn.huangkanglin.simple.web.project</groupId>
             <artifactId>simple-util</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!--servlet 4.0核心包-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!--servlet jsp包-->
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.2</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
+    <!-- 构建模块 -->
+    <build>
+        <!--插件模块-->
+        <plugins>
+            <!-- 设置编译插件版本 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <!-- 指定编码格式插件，否则在DOS下运行mvn命令时当发生文件资源copy时将使用系统默认使用GBK编码 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+        <!--资源模块-->
+        <resources>
+            <!-- 这样也可以把所有的xml文件，打包到相应位置。而不会忽略其它配置文件 -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.**</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>
 </project>
