--- a/simple-web/pom.xml
+++ b/simple-web/pom.xml
@@ -40,6 +40,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
     <!-- 构建模块 -->
